[LD] Mini Bidouilles
- Changé Scale des "Freebies" : chaque objet est un peu plus grand maintenant, selon sa valeur.

- Ajouté valeurs sur Coin Spawner dans les Zones Secrètes.

- Murs Invisibles sur les Chaloupes pour empêcher les joueurs d'entrer dedans et de se coincer.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -79,7 +79,6 @@ ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 NewWindowWidth=1910
 NewWindowHeight=1006
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [EditorStartup]
 LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
@@ -87,9 +86,6 @@ LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Menus/WBP_PauseMenu.WBP_PauseMenu
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Menus/BP_Button.BP_Button
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -147,17 +143,17 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem2=/Game/MaximeLD/LevelMax_3
-MRUItem3=/Game/MaximeLD/LevelMax_3a_ProgSloop
-MRUItem4=/Game/Menus/MapMenu
-MRUItem5=/Game/Menus/MainMenu
-MRUItem6=/Game/GaetanLD/BtbBGym
-MRUItem7=/Game/(OBSOLETE)/(LD)Maxime/LevelMax_3
-MRUItem8=/Game/GaetanLD/RumOnTheRocks_BIGGER_Rev12
-MRUItem9=/Game/ThirdPersonBP/Maps/LevelMax_3b_ProgTreeAndDig
-MRUItem10=/Game/GaetanLD/TreasureHunt_CurseOfBim
-MRUItem11=/Game/(LD)Gaetan/BtbBGym
+MRUItem1=/Game/GaetanLD/TestGalleons
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem3=/Game/MaximeLD/LevelMax_3
+MRUItem4=/Game/MaximeLD/LevelMax_3a_ProgSloop
+MRUItem5=/Game/Menus/MapMenu
+MRUItem6=/Game/Menus/MainMenu
+MRUItem7=/Game/GaetanLD/BtbBGym
+MRUItem8=/Game/(OBSOLETE)/(LD)Maxime/LevelMax_3
+MRUItem9=/Game/GaetanLD/RumOnTheRocks_BIGGER_Rev12
+MRUItem10=/Game/ThirdPersonBP/Maps/LevelMax_3b_ProgTreeAndDig
+MRUItem11=/Game/GaetanLD/TreasureHunt_CurseOfBim
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -204,7 +200,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/EveryoneProg
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -1257,7 +1253,7 @@ ThirdPersonGameMode_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCom
 Character=
 AnimBP_Skeleton_C=
 CameraActor=CameraActor.PostProcess.Lens,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
-StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,
+StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,
 WaterPaymentZone_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 USnapSystemSettings=InputSettings.Bindings.AxisMappings,
 KillerRake_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
@@ -1366,7 +1362,7 @@ Dynamic_LitTorch_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 BP_WS_Chest2P_C=CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,StaticMeshComponent.Collision.Collision,
 ChestAndDelivery_Spawner_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
 TargetPoint=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
-BP_CoinSpawner_C=
+BP_CoinSpawner_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 ToolMenu=
 BP_Trig_CoinPusher_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,
 BP_GoldBagSpawner_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
@@ -1474,26 +1470,26 @@ WBP_PauseMenu_C=
 PlayerController=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Menus/BP_Button
-MRUItem1=/Game/ThirdPersonBP/Blueprints/BP_PlayerController
-MRUItem2=/Game/Menus/WBP_PauseMenu
-MRUItem3=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
-MRUItem4=/Game/EveryoneProg/Dangers/BP_Thunder
-MRUItem5=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite
-MRUItem6=/Game/VFXapprentice/Mat_Borios
-MRUItem7=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat
-MRUItem8=/Game/VFXapprentice/VFX_ThunderPrepare
-MRUItem9=/Game/VFXapprentice/sprite_fx_eclair_v2
-MRUItem10=/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite
-MRUItem11=/Game/MaximeLD/LevelMax_3
-MRUItem12=/Game/MaximeLD/LevelMax_3a_ProgSloop
-MRUItem13=/Game/EveryoneProg/Events/EventManager
-MRUItem14=/Game/EveryoneProg/Managers/BP_CoinSpawner
-MRUItem15=/Game/EveryoneProg/Events/GoldenTears
-MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem17=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
-MRUItem18=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
-MRUItem19=/Game/EveryoneProg/Managers/ThunderCaller
+MRUItem0=/Game/EveryoneProg/Treasures/BP_Sloop
+MRUItem1=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
+MRUItem2=/Game/GaetanLD/TestGalleons
+MRUItem3=/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_03
+MRUItem4=/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_02
+MRUItem5=/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_01
+MRUItem6=/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Coins_04
+MRUItem7=/Game/Menus/BP_Button
+MRUItem8=/Game/ThirdPersonBP/Blueprints/BP_PlayerController
+MRUItem9=/Game/Menus/WBP_PauseMenu
+MRUItem10=/Game/EveryoneProg/Dangers/BP_Thunder
+MRUItem11=/Game/VFXapprentice/sprite_fx_eclair_v2_Sprite
+MRUItem12=/Game/VFXapprentice/Mat_Borios
+MRUItem13=/Game/VFXapprentice/sprite_fx_eclair_v2_Mat
+MRUItem14=/Game/VFXapprentice/VFX_ThunderPrepare
+MRUItem15=/Game/VFXapprentice/sprite_fx_eclair_v2
+MRUItem16=/Game/VFXapprentice/FX_S_Elec_01_5x2_Sprite
+MRUItem17=/Game/MaximeLD/LevelMax_3
+MRUItem18=/Game/MaximeLD/LevelMax_3a_ProgSloop
+MRUItem19=/Game/EveryoneProg/Events/EventManager
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -4857,6 +4853,11 @@ bHideUnrelatedNodes=False
 /Game/VFXapprentice/sprite_fx_eclair_v2_Sprite.sprite_fx_eclair_v2_Sprite=1
 /Game/VFXapprentice/Mat_Borios.Mat_Borios=1
 /Game/VFXapprentice/sprite_fx_eclair_v2_Mat.sprite_fx_eclair_v2_Mat=1
+/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Coins_04.SM_Item_Coins_04=0
+/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_01.SM_Item_Gem_01=0
+/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_02.SM_Item_Gem_02=0
+/Game/PolygonPack/PolygonPirates/Meshes/Items/SM_Item_Gem_03.SM_Item_Gem_03=0
+/Game/EveryoneProg/Treasures/BP_Sloop.BP_Sloop=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/EveryoneProg/Events/GoldenTears.GoldenTears;
@@ -5061,7 +5062,7 @@ MacTargetSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Graphs.GraphBackgroundBrush\" \"Object.Graphs.GraphBackgroundBrush.TintColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.MouseStyle\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" \"Object.MultiplayerOptions.ServerDebugDrawingColorTint\" "
@@ -5079,11 +5080,11 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BoxComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
-ShapeComponent=
+ShapeComponent="\"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -5104,7 +5105,7 @@ ThirdPersonGameMode_C="\"Object.Minutes\" \"Object.Minutes\" "
 GameModeBase="\"Object.Seconds\" "
 Info="\"Object.Seconds\" "
 StaticMesh=
-StreamableRenderAsset="\"Object.Texture.PaddingColor\" \"Object.Adjustments.ChromaKeyColor\" "
+StreamableRenderAsset=
 MonSuperSeau_C=
 SkeletalMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -5178,8 +5179,8 @@ NavigationObjectBase=
 BP_Gamemode_C="\"Object.Seconds\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object.MouseStyle\" "
-Visual="\"Object.MouseStyle\" "
+Widget=
+Visual=
 WBP_CharacterSelect_C="\"Object.PlayerColours\" \"Object.PlayerColours\" "
 UserWidget="\"Object.ButtonArray\" "
 SpringArmComponent="\"Object.Tags.ComponentTags\" "
@@ -5215,8 +5216,8 @@ WidgetComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.Custo
 WBP_OrderTimer_C="\"Object.Render Transform.RenderTransform\" "
 WBP_DeliverTimer_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Border="\"Object.Content.Padding\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.MouseStyle\" "
-PanelWidget="\"Object.MouseStyle\" "
+ContentWidget=
+PanelWidget=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 GridPanel="\"Object.Render Transform.RenderTransform\" "
@@ -5340,8 +5341,8 @@ BP_Cannon_C=
 SplineComponent="\"Object.Spline.DefaultUpVector\" \"Object.Tags.ComponentTags\" "
 WBP_PlayerScores_ranked_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 BP_PressurePlate_C=
-BP_Button_C="\"Object.MouseStyle\" "
-Button="\"Object.MouseStyle\" "
+BP_Button_C=
+Button=
 WBP_MapMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 WBP_MainMenu_C="\"Object.ButtonArray\" "
 BP_TreasureTree_C="\"Object.Default.ObjectsToSpawn\" "
