--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -2,5 +2,5 @@
 bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-StagingDirectory=(Path="F:/BonetobeBad-02-04-2021")
+StagingDirectory=(Path="F:/.BtbB - 18.04.2021")
 
