[PRG] Moving Raft
- Le Moving Raft apparaît maintenant avec 40 Pièces sur lui (on peut en rajouter plus au besoin)

- L'effet est pas encore ouf visuellement, mais je ne pense pas qu'on puisse faire beaucoup mieux dans la mesure où les pièces ont besoin d'être Physiquées presque tout le temps (pour détecter le joueur, pour spawn, plein de choses...)

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,7 +78,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 ServerFixedFPS=0
 LastSize=(X=0,Y=0)
 NewWindowWidth=2550
-NewWindowHeight=1366
+NewWindowHeight=1006
 
 [EditorStartup]
 LastLevel=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
@@ -88,7 +88,7 @@ CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/EveryoneProg/Managers/ScoreManager.ScoreManager
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores.WBP_PlayerScores
-OpenAssetsAtExit=/Game/EveryoneProg/Events/PvP/EnviousSkull.EnviousSkull
+OpenAssetsAtExit=/Game/EveryoneProg/Ships/BP_MovingRaft.BP_MovingRaft
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/BPI_GameMode.BPI_GameMode
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -142,8 +142,6 @@ SelectedSplinePointSizeAdjustment=0.000000
 SplineLineThicknessAdjustment=0.000000
 SplineTangentHandleSizeAdjustment=0.000000
 SplineTangentScale=1.000000
-GridEnabled=False
-CurrentPosGridSize=3
 
 [MRU]
 MRUItem0=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
@@ -204,7 +202,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SelectedPaths=/Game/EveryoneProg/Managers
+ContentBrowserTab1.SelectedPaths=/Game/EveryoneProg/Ships
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -1424,7 +1422,7 @@ BP_PressurePlate_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 BP_TreasureTree_C=
 K2Node_CustomEvent=K2Node_CustomEvent.Inputs.InputArgument0,K2Node_CustomEvent.Inputs.InputArgument1,
 BP_TreasureDig_C=StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,
-BP_MovingRaft_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ParticleSystemComponent.Rendering.TextureStreaming,ParticleSystemComponent.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,SphereComponent.Collision.Collision,SphereComponent.Physics.ConstraintsGroup,EdGraph.Inputs.InputArgument0,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,CameraActor.PostProcess.Lens,CameraComponent.PostProcess.Rendering Features,CameraComponent.PostProcess.Film,CameraComponent.PostProcess.Color Grading,CameraComponent.PostProcess.Lens,BlockingVolume.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_CustomEvent.Inputs.InputArgument0,K2Node_GetClassDefaults.PinOptions.ShowPinForProperties,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Utilities.Transformation.Collision,
+BP_MovingRaft_C=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorExperimentalSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,
 EditorSettings=
@@ -1490,25 +1488,25 @@ ScoreManager_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.
 Widget=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/BPI_GameMode
-MRUItem1=/Game/EveryoneProg/Events/PvP/EnviousSkull
-MRUItem2=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
-MRUItem3=/Game/EveryoneProg/Managers/ScoreManager
-MRUItem4=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
-MRUItem5=/Game/Menus/MapMenu
-MRUItem6=/Game/ThirdPersonBP/Blueprints/BP_Gamemode
-MRUItem7=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
-MRUItem8=/Game/Menus/WBP_MapMenu
-MRUItem9=/Game/Menus/Assets/Simple_gold_crown_svg
-MRUItem10=/Game/Menus/BP_Button
-MRUItem11=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_Ranked1
-MRUItem12=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
-MRUItem13=/Game/Menus/WBP_MainMenu
-MRUItem14=/Game/ArtAndMusic/Music/AttenuationSettings/Test
-MRUItem15=/Game/EveryoneProg/Events/PvE/GoldenTears
-MRUItem16=/Game/EveryoneProg/Events/PvE/ThunderCaller
-MRUItem17=/Game/EveryoneProg/Events/BP_StoneSkull
-MRUItem18=/Game/EveryoneProg/Ships/BP_MovingRaft
+MRUItem0=/Game/EveryoneProg/Ships/BP_MovingRaft
+MRUItem1=/Game/ThirdPersonBP/Blueprints/BPI_GameMode
+MRUItem2=/Game/EveryoneProg/Events/PvP/EnviousSkull
+MRUItem3=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores
+MRUItem4=/Game/EveryoneProg/Managers/ScoreManager
+MRUItem5=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig
+MRUItem6=/Game/Menus/MapMenu
+MRUItem7=/Game/ThirdPersonBP/Blueprints/BP_Gamemode
+MRUItem8=/Game/ThirdPersonBP/Blueprints/UI/WBP_ScoreScreen
+MRUItem9=/Game/Menus/WBP_MapMenu
+MRUItem10=/Game/Menus/Assets/Simple_gold_crown_svg
+MRUItem11=/Game/Menus/BP_Button
+MRUItem12=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_Ranked1
+MRUItem13=/Game/ThirdPersonBP/Blueprints/UI/WBP_PlayerScores_ranked
+MRUItem14=/Game/Menus/WBP_MainMenu
+MRUItem15=/Game/ArtAndMusic/Music/AttenuationSettings/Test
+MRUItem16=/Game/EveryoneProg/Events/PvE/GoldenTears
+MRUItem17=/Game/EveryoneProg/Events/PvE/ThunderCaller
+MRUItem18=/Game/EveryoneProg/Events/BP_StoneSkull
 MRUItem19=/Game/EveryoneProg/BP_PressurePlate
 
 [DetailCategories]
@@ -4722,6 +4720,11 @@ ScoreManager_C.TransformCommon=True
 ScoreManager_C.Game=True
 ScoreManager_C.None=True
 ScoreManager_C.Utilities=True
+BP_MovingRaft_C.None=True
+BP_MovingRaft_C.Game=True
+BP_MovingRaft_C.BP_MovingRaft=True
+BP_MovingRaft_C.Utilities=True
+ChildActorComponent.None=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -5067,8 +5070,8 @@ bHideUnrelatedNodes=False
 /Game/EveryoneProg/Managers/ScoreManager.ScoreManager=1
 
 [PlacementMode]
-RecentlyPlaced=/Game/EveryoneProg/Managers/ScoreManager.ScoreManager;
 RecentlyPlaced=/Game/EveryoneProg/Ships/BP_MovingRaft.BP_MovingRaft;
+RecentlyPlaced=/Game/EveryoneProg/Managers/ScoreManager.ScoreManager;
 RecentlyPlaced=/Game/EveryoneProg/Treasures/BP_MagicChestStatic.BP_MagicChestStatic;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
@@ -5287,7 +5290,7 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Tags.ComponentTags\" "
@@ -5371,7 +5374,7 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 BeerMugWithGrab_C="\"Object.NewVar_0\" \"Object.NewVar_0\" "
-ChildActorComponent="\"Object.Tags.ComponentTags\" "
+ChildActorComponent="\"Object.ChildActorComponent.ChildActorTemplate\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Default\" \"Object.ChildActorComponent.ChildActorTemplate.Object.Collision\" \"Object.Tags.ComponentTags\" "
 Grog_C=
 CableComponent="\"Object.Cable.AttachEndTo\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MaterialEditorInstanceConstant=
