[PRG] Correction Gamebreakers
- Logique de choix de Character en "OR" ne fonctionne pas encore, retirée pour un "AND" en attendant.

- Gamebreaker corrigé : désynchronisation entre Spawn Player et Level Start, empêchant le jeu de fonctionner autrement qu'en mode "Debug".

- Ajout d'une animation UI indiquant à un joueur que sa combinaison Couleur | Skin est déjà prise, et donc inaccessible.

--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -2,5 +2,5 @@
 bAddPacks=False
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-StagingDirectory=(Path="F:/.BoneToBeBad With PvP - 19.04.2021")
+StagingDirectory=(Path="F:/Bone to be Bad - 23.04.2021")
 
