[PRG + ART] Calice, HeadLoss; Plates
- Modification visuelle du Calice : à la place des tons rouges, le Calice a maintenant des tons jaunes, pour le rendre plus cohérent avec les autres objets "utiles" (Gold Bag, Pressure Plates, Raft...)
-Modification apportée aussi au Calice Delivery.

- Modification de la logique de Spawn de Tête lorsqu'un joueur se fait tuer : la tête devrait maintenant apparaître plus fréquemment au dessus du player tué, permettant de la récupérer plus vite.
- Prévu : Scripter un respawn de Tête si celle-ci sort de la map, pas encore fait.

- Ajout d'un Billboard mouvant au dessus de la Tête : permet de mieux repérer celle-ci lorsqu'elle est perdue.
- Ajout d'une animation de Pulse sur la Light de la Tête : permet aussi de mieux repérer celle-ci.

- Ajout d'un Torus autour des Pressure Plates : s'affiche quand les PP sont utilisées. Lumineux et Jaune pour correspondre aux autres Signes donnés.

- Ajout d'une petite animation sur le Crâne lié aux PPs : cette animation devrait attirer l'attention du joueur et lui permettre de mieux déterminer sur quoi la PP aura un effet.

- Retrait du ralentissement sur le WaterVolume : pourra être ajouté à nouveau au besoin, d'abord un test pour voir si son retrait réduit la frustration lors d'une mort ou d'un transport d'objet.

- Ajout d'un Calice Spawner et Calice Delivery dans la zone d'introduction : permet aux joueurs de découvrir le fonctionnement de cet objet.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=BBTB
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MaximeLD/LevelMax_3b_ProgTreeAndDig.LevelMax_3b_ProgTreeAndDig
+EditorStartupMap=/Game/MaximeLD/LevelMax_3b_resize.LevelMax_3b_resize
 GameDefaultMap=/Game/Menus/MainMenu.MainMenu
 TransitionMap=None
 bUseSplitscreen=False
