[PRG & UI] Fixed Mini Bugs with the sloops and added Loading Screen with start
Un petit bug avec la sloop, quand on est moins de 4 joueurs, certaines sloop peuvent accepter les gold bags alors qu'elles ne devraient pas. Fix en changeant la player index dans les sloops dans le level

AJout d'un menu apres le character select qui montre un texte Loading et apres demandes au joueurs d'appuyer sur Start (ou entrer au clavier) pour lancer la partie.

--- a/Saved/Config/Windows/Input.ini
+++ b/Saved/Config/Windows/Input.ini
@@ -1,5 +1,6 @@
 [/Script/Engine.Console]
 HistoryBuffer=DebugSkipIntro
 HistoryBuffer=CE D
+HistoryBuffer=ce deb
 HistoryBuffer=ce Debug_SkipIntro
 
