[UI] New How to Play Menu + Controller navigation + new timer

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -141,6 +141,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MenuDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
 +ActionMappings=(ActionName="MenuUp",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Up)
 +ActionMappings=(ActionName="MenuDown",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
++ActionMappings=(ActionName="Back",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="MenuTabForward",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="MenuTabBack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
